Adds age calculator project

--- a/templates/result.html
+++ b/templates/result.html
@@ -3,6 +3,10 @@
 
     <head>
         <style>
+            body{
+                background-color: #C8A2CB;
+              
+            }
             .about {
                 margin-top: 10px;
                 padding: 30px
