--- a/templates/calc.html
+++ b/templates/calc.html
@@ -1,71 +1,57 @@
-<!DOCTYPE html>
-<html>
+<!doctype html>
+<html lang="en">
 
     <head>
+        <!-- Required meta tags -->
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
+        <!-- Bootstrap CSS -->
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
+            integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+
+        <title>Age Calculator</title>
         <style>
+            body {
+                background-color: #FFD1DC;
+                background-repeat: no-repeat;
+                background-size: cover;
+                	
+            }
+
             .container {
+              
+                width: 600px;
                 display: flex;
-                justify-content: center;
-                height: 500px;
-                padding: 0px;
                 flex-direction: column;
-                align-items: center;
-                justify-content: center;
-                margin: 0px
+                padding: 50px 20px;
+                box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.3);
+                background-color: #FFE6EE;
             }
 
-            .smallcont {
-                padding: 100px;
-                background-color: #ececec;
-                height: 250px;
-                margin-top: 2px;
-                width: 500px;
+            .topic {
+
+
+                text-align: justify;
+                margin-left: 800px;
+                margin-top: 100px;
+                font-size: 50px;
+                font-weight: 700;
+                color: #1261A0;
+
 
             }
 
-            .heading {
-                border: 2px solid blue;
-                height: 40px;
-                width: 700px;
-                background-color: #1261A0;
-                color: white;
-                font-size: 25px;
-                text-align: center;
-                padding-top: 10px
-            }
 
             .calc {
                 font-size: 25px;
             }
 
-            .topic {
-                display: inline;
-                justify-content: center;
-                text-align: center;
-                margin-left: 600px;
-                font-size: 40px;
-                font-weight: 700;
-            }
-
-            .para {
-                display: block;
-                justify-content: center;
-                width: 700px;
-                margin-left: 600px;
-                font-size: 20px;
-                font-weight: 500;
-                padding: 0px
-            }
-
-            .about {
-                padding-top: 100px
-            }
-
             #fname {
                 font-size: 25px;
                 margin-bottom: 20px;
-                margin-left: 53px;
+                margin-left: 55px;
+                width: 310px
             }
 
             #bdate {
@@ -84,7 +70,7 @@
             #byear {
                 font-size: 25px;
                 margin-bottom: 30px;
-                margin-left: 20px;
+                margin-left: 24px;
                 width: 310px;
             }
 
@@ -95,18 +81,41 @@
                 color: white;
                 margin-left: 170px;
             }
+
+            .para {
+                display: block;
+                justify-content: center;
+                width: 700px;
+                margin-left: 600px;
+                font-size: 20px;
+                font-weight: 500;
+                padding: 0px
+            }
+
+            .heading {
+                border: 2px solid blue;
+                height: 40px;
+                width: 600px;
+                background-color: #1261A0;
+                color: white;
+                font-size: 25px;
+                text-align: center;
+                justify-content: center;
+                align-items: center;
+                margin-left: 34.4%;
+                margin-top: 70px;
+
+            }
         </style>
     </head>
 
     <body>
         <header class="about">
             <h1 class="topic">Age Calculator</h1>
-            <p class="para">The Age Calculator can determine the age or interval between two dates. The calculated age
-                will be displayed in years,
-                months and days.</p>
+
         </header>
+        <div class="heading">Modify the values and click the calculate button</div>
         <div class="container">
-            <div class="heading">Modify the values and click the calculate button to use</div>
             <div class="smallcont">
                 <form action='/result' method="get">
                     <label for="fname" class="calc">Name:</label>
@@ -127,13 +136,19 @@
                 </form>
             </div>
         </div>
+
+
+        <!-- Optional JavaScript -->
+        <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+        <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+            integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+            crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+            integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+            crossorigin="anonymous"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
+            integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
+            crossorigin="anonymous"></script>
     </body>
 
 </html>
-
-
-
-<!-- name
-date
-month
-year -->
